# packer-service

./: .dockerignore  .gitignore  Dockerfile  LOCAL.md  README.md  pack_config.json  packer-config.yaml  server.py  service.json  start.sh
examples/hello/: Cargo.toml  Dockerfile  pack_config.json  service.json  start.sh
examples/hello/src/: main.rs
ide/: SERVICE_CONFIG_GUIDE.md
ide/templates/go/: Dockerfile  pack_config.json  service.json
ide/templates/go/src/: main.go
ide/templates/java-gradle/: Dockerfile  build.gradle.kts  pack_config.json  service.json  settings.gradle.kts
ide/templates/java-spring/: Dockerfile  pack_config.json  pom.xml  service.json  start.sh
ide/templates/node-express/: Dockerfile  pack_config.json  package.json  service.json
ide/templates/node-express/src/: index.js
ide/templates/node-typescript/: Dockerfile  pack_config.json  package.json  service.json
ide/templates/php-laravel/: Dockerfile  composer.json  pack_config.json  service.json  start.sh
ide/templates/python/: Dockerfile  pack_config.json  requirements.txt  service.json  start.sh
ide/templates/rust/: Cargo.toml  Dockerfile  pack_config.json  service.json  start.sh
ide/workspace/: START_HERE.md
src/: README.md
src/protos/: buffer_pb2.py  celaut.proto  celaut_pb2.py  gateway_bee.py  pack.proto
src/src/manager/: resources.py
src/src/packers/: README.md  zip_with_dockerfile.py
src/src/utils/: hashing.py  logger.py  runtime.py
tests/: test_registry_endpoint.py  test_resource_growth.py  test_serialize_bee.py  test_serialize_bee_roundtrip.py
(+5 files in other folders)
