[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello"
path = "src/main.rs"

# Reproducibility-oriented release profile: abort instead of unwinding (smaller,
# fewer codegen variables), full LTO, symbols stripped. Combined with a
# dependency-free crate this yields a byte-stable static binary.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
